--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-SECRET_KEY=sua-chave-secreta-aqui
+SECRET_KEY=django-insecure-sua-chave-secreta-aqui
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
+DB_NAME=logistica_db
+DB_USER=seu_usuario
+DB_PASSWORD=sua_senha
+DB_HOST=localhost
+DB_PORT=5432
