--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Django==4.2.7
-djangorestframework==3.14.0
-django-cors-headers==4.2.0
-python-dotenv==1.0.0
-drf-yasg==1.21.7
-psycopg2-binary==2.9.7
-django-filter==23.3
+Django>=6.0,<7.0
+djangorestframework>=3.16.1,<4.0.0
+django-cors-headers>=4.9.0,<5.0.0
+python-dotenv>=1.2.1,<2.0.0
+drf-yasg>=1.21.11,<2.0.0
+psycopg2-binary>=2.9.11,<3.0.0
+django-filter>=25.2,<26.0
+djangorestframework-simplejwt>=5.5.1,<6.0.0
