--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ drf-yasg>=1.21.11,<2.0.0
 psycopg2-binary>=2.9.11,<3.0.0
 django-filter>=25.2,<26.0
 djangorestframework-simplejwt>=5.5.1,<6.0.0
+gunicorn>=21.2.0,<22.0.0
+whitenoise>=6.6.0,<7.0.0
