--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "python-dotenv (>=1.2.1,<2.0.0)",
     "django-cors-headers (>=4.9.0,<5.0.0)",
     "django-filter (>=25.2,<26.0)",
-    "psycopg2-binary (>=2.9.11,<3.0.0)"
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "dj-database-url (>=3.0.1,<4.0.0)"
 ]
 
 
