--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "django-cors-headers (>=4.9.0,<5.0.0)",
     "django-filter (>=25.2,<26.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
-    "dj-database-url (>=3.0.1,<4.0.0)"
+    "dj-database-url (>=3.0.1,<4.0.0)",
+    "whitenoise (>=6.11.0,<7.0.0)"
 ]
 
 
